<resources>
    <string name="app_name">NFTproject</string>
    <string name="sign_up">회원가입</string>
    <string name="input_email">이메일 입력</string>
    <string name="input_authenticate_code">인증코드 입력</string>
    <string name="request_authenticate_code">인증코드 요청</string>
    <string name="input_id">아이디 입력</string>
    <string name="input_password">비밀번호 입력</string>
    <string name="input_password_confirm">비밀번호 확인</string>
    <string name="input_nickname">닉네임 입력</string>
    <string name="id_length">아이디는 5~20자 입니다.</string>
    <string name="password_format">비밀번호는 영문 대 소문자, 숫자, 특수문자를 사용하세요. 비밀번호는 8~20자 입니다.</string>
    <string name="email_invalied_format">이메일 형식이 옳바르지 않습니다.</string>
    <string name="password_not_same">비밀번호가 일치하지 않습니다.</string>
    <string name="complete_sign_up">회원가입을 완료하였습니다.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_pw">비밀번호 찾기</string>
    <string name="option_2">Option 2</string>
    <string name="option_1">Option 1</string>
    <string name="please_input_email_code">이메일 코드를 입력해주세요</string>
    <string name="menu_home">홈</string>
    <string name="menu_chagne">교환</string>
    <string name="menu_gift">선물</string>
    <string name="title_activity_maker">MakerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="input_movie_name">영화명을 입력해주세요</string>
    <string name="input_genere_txt">장르를 입력해주세요</string>
    <string name="input_age_txt">연령제한을 입력해주세요</string>
    <string name="publisher">발행자</string>
    <string name="movie_title">영화제목</string>
    <string name="title">영화 제목</string>
    <string name="event">게시글</string>
    <string name="setting">내정보</string>


    <string name="muscle_chest">대흉근</string>
    <string name="muscle_shoulder">어깨</string>
    <string name="muscle_biceps">이두근</string>
    <string name="muscle_forearms">전완근</string>
    <string name="muscle_abs">복근</string>
    <string name="muscle_quadriceps">대퇴사두근</string>
    <string name="muscle_calves">비복근</string>

    <string name="muscle_trap">승모근</string>
    <string name="muscle_lat">광배근</string>
    <string name="muscle_triceps">삼두근</string>
    <string name="muscle_glutes">대둔근</string>
    <string name="muscle_hamstrings">햄스트링</string>

    <!-- nft 발행 정보 -->
    <string name="ACTION">액션</string>
    <string name="ADVENTURE">모험</string>
    <string name="FANTASY">판타지</string>
    <string name="SCIENCEFICTION">공상과학</string>
    <string name="NOIR">누아르</string>
    <string name="WAR">전쟁</string>
    <string name="HORROR">공포</string>
    <string name="THRILLER">스릴러</string>
    <string name="MYSTERY">미스터리</string>
    <string name="ROMANCE">멜로</string>
    <string name="COMEDY">코디미</string>
    <string name="DRAMA">드라마</string>
    <string name="ANIMATION">애니메이션</string>
    <string name="ART">예술</string>
    <string name="MUSICAL">뮤지컬</string>
    <string name="DOCUMENTARY">다큐멘터리</string>
    <string name="MUMBLECORE">멈블 코어</string>
    <string name="EDUCATION">교육</string>
    <string name="NARRATIVE">서사</string>
    <string name="EXPERIMENT">실험</string>
    <string name="EXPLOITATION">엑스플로이테이션</string>
    <string name="DISASTER">재난</string>
    <string name="CONCERT">콘서트</string>
    <string name="CRIME">범죄</string>
    <string name="SUPERHERO">슈퍼히어로</string>
    <string name="SPORT">스포츠</string>

    <!-- FilmRating -->
    <string name="G_RATED">전체관람가</string>
    <string name="PG12">12세 이상 관람가</string>
    <string name="PG15">15세 이상 관람가</string>
    <string name="PG18">18세 이상 관람가</string>
    <string name="cancel">취소</string>
    <string name="apply">적용</string>
    <string name="gerne">장르</string>
</resources>