<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.signup.SignUpFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
   >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="130dp"
                android:layout_height="65dp"
                android:src="@drawable/img_logo"
                android:layout_marginTop="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edge_blue_round"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="16sp"
                app:layout_constraintStart_toStartOf="@id/edt_id"
                app:layout_constraintEnd_toEndOf="@id/edt_id"
                app:layout_constraintTop_toBottomOf="@id/tv_sign_up">

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:background="@android:color/transparent"
                    android:hint="@string/input_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/main_gray"
                    android:paddingHorizontal="14dp"
                    android:paddingVertical="12dp"
                    android:drawableStart="@drawable/ic_input_email"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/light_blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <View
                    android:id="@+id/line_email"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:drawableTint="@color/light_blue"
                    android:layout_marginHorizontal="@dimen/fab_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edt_email"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <EditText
                    android:id="@+id/edt_authenticate_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:background="@android:color/transparent"
                    android:visibility="gone"
                    android:hint="@string/input_authenticate_code"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/main_gray"
                    android:paddingHorizontal="14dp"
                    android:paddingVertical="12dp"
                    android:drawableStart="@drawable/ic_email_authenticate"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/light_blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line_email"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email_invalied_format"
                android:drawableTint="@color/light_blue"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:textColor="@color/black"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/layout_email"
                app:layout_constraintEnd_toEndOf="@id/layout_email"
                app:layout_constraintTop_toBottomOf="@id/layout_email"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_email_authenticate"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:background="@drawable/sel_btn_blue_pressed"
                android:text="@string/request_authenticate_code"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/layout_email"
                app:layout_constraintTop_toBottomOf="@id/tv_email"
                app:layout_constraintEnd_toEndOf="@id/layout_email"
                />

            <EditText
                android:id="@+id/edt_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/shape_edge_blue_round"
                android:drawableStart="@drawable/ic_input_id"
                android:drawablePadding="8dp"
                android:drawableTint="@color/light_blue"
                android:hint="@string/input_id"
                android:inputType="text"
                android:paddingHorizontal="14dp"
                android:paddingVertical="12dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/main_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_email_authenticate" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_length"
                android:textSize="12sp"
                android:visibility="gone"
                android:drawableTint="@color/light_blue"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="@id/edt_id"
                app:layout_constraintTop_toBottomOf="@id/edt_id"/>


            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/shape_edge_blue_round"
                android:drawableStart="@drawable/ic_password_small"
                android:drawablePadding="8dp"
                android:drawableTint="@color/light_blue"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:paddingHorizontal="14dp"
                android:paddingVertical="12dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/main_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/edt_id"
                app:layout_constraintStart_toStartOf="@id/edt_id"
                app:layout_constraintTop_toBottomOf="@id/tv_id" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_format"
                android:drawableTint="@color/light_blue"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:paddingBottom="3dp"
                app:layout_constraintStart_toStartOf="@id/edt_password"
                app:layout_constraintTop_toBottomOf="@id/edt_password"/>


            <EditText
                android:id="@+id/edt_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/shape_edge_blue_round"
                android:drawableStart="@drawable/ic_password_small"
                android:drawablePadding="8dp"
                android:drawableTint="@color/light_blue"
                android:hint="@string/input_password_confirm"
                android:inputType="textPassword"
                android:paddingHorizontal="14dp"
                android:paddingVertical="12dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/main_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/edt_password"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/edt_password"
                app:layout_constraintTop_toBottomOf="@id/tv_password" />

            <TextView
                android:id="@+id/tv_password_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_not_same"
                android:drawableTint="@color/light_blue"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toStartOf="@id/edt_password_confirm"
                app:layout_constraintTop_toBottomOf="@id/edt_password_confirm"/>

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/shape_edge_blue_round"
                android:drawableStart="@drawable/ic_input_nickname"
                android:drawablePadding="8dp"
                android:drawableTint="@color/light_blue"
                android:hint="@string/input_nickname"
                android:inputType="text"
                android:paddingHorizontal="14dp"
                android:paddingVertical="12dp"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/main_gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/edt_password_confirm"
                app:layout_constraintStart_toStartOf="@id/edt_password_confirm"
                app:layout_constraintTop_toBottomOf="@id/tv_password_confirm" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/sel_btn_blue_pressed"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="20sp"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_username" />

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_arrow_left"
                android:layout_margin="15dp"
                app:tint="@color/main_gray_light"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>